# wrang

./: .gitignore  CHANGELOG.md  README.md  compact.md  project_details.md  pyproject.toml  requirements.txt  test_cli.md  test_file.py  test_notebook.ipynb  titanic_schema.json
.github/workflows/: publish.yml
tests/: test_automl.py  test_basic.py  test_cleaner.py  test_cli.py  test_config.py  test_explorer.py  test_inspector.py  test_loader.py  test_transformer.py  test_utils.py  test_validator.py
wrang/: __init__.py  __main__.py  _public_api.py  config.py  main.py
wrang/cli/: formatters.py  interface.py  menus.py
wrang/core/: __init__.py  cleaner.py  explorer.py  inspector.py  loader.py  transformer.py  validator.py
wrang/utils/: constants.py  exceptions.py
wrang/viz/: export_utils.py
