[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wrang"
version = "0.2.1"
description = "wrang: lightning-fast data wrangling toolkit for the terminal"
readme = "README.md"
authors = [{name = "Sudhanshu Mukherjee", email = "sudhanshumukherjeexx@gmail.com"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
keywords = ["data-wrangling", "data-analysis", "machine-learning", "data-science", "cli", "data-exploration", "polars", "fast"]
requires-python = ">=3.10"
dependencies = [
    "polars-lts-cpu>=0.20.0",
    "blessed==1.19.1",
    "joblib>=1.2.0",
    "numpy>=1.26.0",
    "plotext==5.2.8",
    "pydantic>=2.0.0",
    "pyfiglet==0.8.post1",
    "fastparquet>=2024.0.0",
    "xlrd>=2.0.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "termcolor>=2.0.0",
    "pyarrow>=14.0.0",
    "tqdm>=4.64.0",
    "nbformat>=5.9.0",
    "openpyxl>=3.1.0"
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.7.0,<4.0.0",
    "seaborn>=0.12.0,<1.0.0",
]

advanced = [
    "duckdb>=0.9.0",
    "connectorx>=0.3.0",
    "polars[all]>=0.20.0",
]

dev = [
    "pytest>=7.3.0",
    "pytest-cov>=4.0.0",
    "twine",
    "ruff",
    "wheel",
    "black",
    "isort",
    "flake8",
    "mypy",
    "pre-commit",
]

full = [
    "wrang[viz,advanced]",
]

[project.urls]
Homepage = "https://github.com/sudhanshumukherjeexx/wrang"
Documentation = "https://sudhanshumukherjeexx.github.io/wrang"
Repository = "https://github.com/sudhanshumukherjeexx/wrang.git"
Issues = "https://github.com/sudhanshumukherjeexx/wrang/issues"
Changelog = "https://github.com/sudhanshumukherjeexx/wrang/blob/main/CHANGELOG.md"

[project.scripts]
wrang = "wrang.main:cli_entry_point"
ride  = "wrang.main:cli_entry_point"

[tool.setuptools.packages.find]
where = ["."]
include = ["wrang*"]
exclude = ["tests*", "venv*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
]